Ajout de clef pour le ActivityEnd State precondition checker

--- a/PAGOD/src/resources/languages/wizard/pagod_wizard.properties
+++ b/PAGOD/src/resources/languages/wizard/pagod_wizard.properties
@@ -158,4 +158,8 @@ loadPreferencesErrorTitle=Chargement impossible
 #TextViewerPane
 cantReadFile=Impossible de lire le fichier
 
+#ActivityEndState
+postCondTitle=Vérifications de fin d'activité
+postCondMessage=Avez-vous réalisés les produits suivants :
+
  
