--- a/PAGOD/src/resources/languages/wizard/pagod_wizard_en.properties
+++ b/PAGOD/src/resources/languages/wizard/pagod_wizard_en.properties
@@ -161,3 +161,7 @@ cantReadFile=Can not read this File
 #CreateProduct
 createProductTitle=Create product
 createProductmsg=Do you want to create product
+
+#ActivityEndState
+postCondTitle=Avtivity end checking
+postCondMessage=have you done the following products :
