--- a/PAGOD/src/resources/languages/wizard/pagod_wizard_fr.properties
+++ b/PAGOD/src/resources/languages/wizard/pagod_wizard_fr.properties
@@ -161,3 +161,6 @@ cantReadFile=Impossible de lire le fichier
 #CreateProduct
 createProductTitle=Créer un produit
 createProductmsg=Voulez-vous créer le produit
+#ActivityEndState
+postCondTitle=Vérification de fin d'activités
+postCondMessage=Avez-vous réalisés les produits suivants :
