Ajout des clé nécessaires a l'etat de fin

--- a/PAGOD/src/resources/languages/wizard/pagod_wizard.properties
+++ b/PAGOD/src/resources/languages/wizard/pagod_wizard.properties
@@ -48,6 +48,8 @@ CheckRoleLabel=ROLE :
 CheckProductsLabel=Vous devez disposer des produits suivants :
 CheckToolsLabel=Vous devez disposer des outils suivants :
 CheckGuidancesLabel=Guides disponibles sur cette activité :
+#EndCheckPanel
+CheckOutputsProductsLabel=Vous devez avoir réaliser des produits suivants :
 
 #ProcessPane Message
 noContentActivity=Aucun descriptif n'a été défini pour cette activité.
@@ -65,6 +67,7 @@ welcomeMessage=<b>Bienvenue</b> !<br> Je suis <b>Pagod</b> votre assistant perso
 openedProcessMessage=Choisissez <b>l'activité</b> pour laquelle vous souhaitez que je vous assiste.
 activityPresentationMessage=Voici la <b>description globale</b> de l'activité !<br> Elle va vous permettre d'avoir une vue d'ensemble sur le travail à faire.
 activityCheckListMessage=Avant de commencer votre travail, je vous conseille de vérifier les <b>prérequis</b> suivant !
+activityEndCheckListMessage=Vous avez fini cette activité, je vous conseille de vérifier si vous avez bien <b>réalisé les produits suivants</b>!
 presentStepMessage=Voici un petit <b>descriptif de l'étape</b> que vous devez réaliser.
 presentProductsMessage=Voila les <b>produits</b> à réaliser ou à modifier.<br> Sélectionnez un produit et je vous aiderai à le réaliser en vous présentant des <b>guides</b> ou en <b>lancant l'application</b> définie pour ce produit.
 
@@ -158,8 +161,6 @@ loadPreferencesErrorTitle=Chargement impossible
 #TextViewerPane
 cantReadFile=Impossible de lire le fichier
 
-#ActivityEndState
-postCondTitle=Vérifications de fin d'activité
-postCondMessage=Avez-vous réalisés les produits suivants :
+
 
  
