--- a/PAGOD/src/resources/languages/wizard/pagod_wizard_en.properties
+++ b/PAGOD/src/resources/languages/wizard/pagod_wizard_en.properties
@@ -48,6 +48,8 @@ CheckRoleLabel=ROLE :
 CheckProductsLabel=You must have the following products :
 CheckToolsLabel=You must have the following tools :
 CheckGuidancesLabel=Guidances available for this activity :
+#EndCheckPanel
+CheckOutputProductsLabel=You should have realize the following products :
 
 #ProcessPane Message
 noContentActivity=There is no description for this activity.
@@ -65,6 +67,7 @@ welcomeMessage=<b>Welcome</b> !<br> I'm <b>Pagod</b> your personnal wizard !<br>
 openedProcessMessage=Choose <b>the activity</b> you want to realize.
 activityPresentationMessage=Here is the <b>Global desciption</b> of this activity !<br> Thanks to that you can have a general view of your job.
 activityCheckListMessage=Before you begin, I advise you to <b>check this points</b>.
+activityEndCheckListMessage=You have done this activity, I advise you to check if you have <b>realize the following products</b>!
 presentStepMessage=Here is a little<b>description of the step</b> you must realize.
 presentProductsMessage=Here are the <b>products</b> you will have to realize or to update.<br> Select a product and I will help you to realize it, presenting you <b>guidances</b> or <b>launching the application</b> previously defined for this product.
 
@@ -162,6 +165,3 @@ cantReadFile=Can not read this File
 createProductTitle=Create product
 createProductmsg=Do you want to create product
 
-#ActivityEndState
-postCondTitle=Avtivity end checking
-postCondMessage=have you done the following products :
