Modification du libelle sur le EndCheckPanel pour qu'il affiche "Vous devez avoir r?alis? les produits suivants"

--- a/PAGOD/src/resources/languages/wizard/pagod_wizard_fr.properties
+++ b/PAGOD/src/resources/languages/wizard/pagod_wizard_fr.properties
@@ -48,8 +48,10 @@ CheckRoleLabel=ROLE :
 CheckProductsLabel=Vous devez disposer des produits suivants :
 CheckToolsLabel=Vous devez disposer des outils suivants :
 CheckGuidancesLabel=Guides disponibles sur cette activité :
+
 #EndCheckPanel
-CheckOutputProductsLabel=Vous devez avoir réaliser des produits suivants :
+CheckOutputProductsLabel=Vous devez avoir réaliser les produits suivants :
+
 #ProcessPane Message
 noContentActivity=Aucun descriptif n'a été défini pour cette activité.
 noContentWorkDef=Aucun descriptif n'a été défini pour cette définition de travail.
