Alors premiere version combo box buggée à mort, mais vous donnera une bonne idée du fonctionnement ... boucle infinie qd retour de activity presentation à preconditionchecker ...
pas implémenté pr les first, middle last step et post conditions;
mais je répère, c juste pr démo rapide jeudi midi
voila ...

--- a/PAGOD/src/resources/languages/wizard/pagod_wizard.properties
+++ b/PAGOD/src/resources/languages/wizard/pagod_wizard.properties
@@ -17,6 +17,7 @@ runActivity=&Lancer l'activité
 next=&Suivant
 previous=&Précédent
 terminate=&Terminer
+gotostep=A&ller à
 ?=&?
 preferences=&Préférences
 about=&A propos
