--- a/PAGOD/src/resources/languages/wizard/pagod_wizard_en.properties
+++ b/PAGOD/src/resources/languages/wizard/pagod_wizard_en.properties
@@ -17,6 +17,7 @@ runActivity=&Run Activity
 next=&Next
 previous=&Previous
 terminate=&Terminate
+gotostep=&Go to
 ?=&?
 preferences=&Preferences
 about=&About
