--- a/PAGOD/src/resources/languages/wizard/pagod_wizard_fr.properties
+++ b/PAGOD/src/resources/languages/wizard/pagod_wizard_fr.properties
@@ -17,6 +17,7 @@ runActivity=&Lancer l'activité
 next=&Suivant
 previous=&Précédent
 terminate=&Terminer
+gotostep=A&ller à
 ?=&?
 preferences=&Préférences
 about=&A propos
