--- a/PAGOD/src/resources/languages/wizard/pagod_wizard_en.properties
+++ b/PAGOD/src/resources/languages/wizard/pagod_wizard_en.properties
@@ -31,6 +31,9 @@ processFileChooserFilterDPCorPAGOD=DPC or PAGOD process (*.dpc, *.pagod)
 processFileChooserFilterDPC=DPC process (*.dpc)
 processFileChooserFilterPAGOD=PAGOD process (*.pagod)
 
+# WorkspaceFileChooser
+workspaceFileChooserTitle=Choose a work directory
+
 #ContentViewerPane
 seeFileOfContents=See description
 
