--- a/PAGOD/src/resources/languages/wizard/pagod_wizard_fr.properties
+++ b/PAGOD/src/resources/languages/wizard/pagod_wizard_fr.properties
@@ -31,6 +31,9 @@ processFileChooserFilterDPCorPAGOD=processus DPC ou PAGOD (*.dpc, *.pagod)
 processFileChooserFilterDPC=processus DPC (*.dpc)
 processFileChooserFilterPAGOD=processus PAGOD (*.pagod)
 
+# WorkspaceFileChooser
+workspaceFileChooserTitle=Choisir un répertoire de travail
+
 #ContentViewerPane
 seeFileOfContents=Voir le descriptif.
 
