--- a/PAGOD/src/resources/languages/wizard/pagod_wizard_en.properties
+++ b/PAGOD/src/resources/languages/wizard/pagod_wizard_en.properties
@@ -109,6 +109,14 @@ AddExtBtUpdate=Update
 AddExtTitreAdd=Add new extension
 AddExtTitreUpdate=Update extension
 
+#NewProjectDialog
+NewProjectTitre=Create a new project
+NewProjectBtCreate=Create project
+NewProjectBtCancel=Cancel
+NewProjectLabel=Name of the project : 
+NewProjectErrorCreateException=A project with the same name already exists.
+NewProjectErrorTitle=Error
+
 #SetToolDialog
 SetToolBtUpdate=Update
 SetToolBtBrowse=Browse
