--- a/PAGOD/src/resources/languages/wizard/pagod_wizard_fr.properties
+++ b/PAGOD/src/resources/languages/wizard/pagod_wizard_fr.properties
@@ -110,6 +110,14 @@ AddExtBtUpdate=Modifier
 AddExtTitreAdd=Ajout d'une nouvelle extension
 AddExtTitreUpdate=Modification d'une extension
 
+#NewProjectDialog
+NewProjectTitre=Création d'un nouveau projet
+NewProjectBtCreate=Créer le projet
+NewProjectBtCancel=Annuler
+NewProjectLabel=Nom du projet : 
+NewProjectErrorCreateException=Un projet du même nom existe déjà.
+NewProjectErrorTitle=Erreur
+
 #SetToolDialog
 SetToolBtUpdate=Modifier
 SetToolBtBrowse=Parcourir
