--- a/PAGOD/src/resources/languages/wizard/pagod_wizard_en.properties
+++ b/PAGOD/src/resources/languages/wizard/pagod_wizard_en.properties
@@ -9,7 +9,8 @@ applicationDescription=...
 # MainFrame
 # MainFrameMenuBar
 file=&File
-open=&Open
+openProcess=&Open process
+openProject=&Open project
 toolsSettings=&Tools settings
 quit=&Quit
 activity=&Activity
@@ -105,6 +106,7 @@ AddExtLabelPath=Path :
 AddExtBtAdd=Add
 AddExtBtCancel=Cancel
 AddExtBtBrowse=Browse
+AddExtBtDefault=Default
 AddExtBtUpdate=Update
 AddExtTitreAdd=Add new extension
 AddExtTitreUpdate=Update extension
