--- a/PAGOD/src/resources/languages/wizard/pagod_wizard_fr.properties
+++ b/PAGOD/src/resources/languages/wizard/pagod_wizard_fr.properties
@@ -10,7 +10,8 @@ applicationDescription=...
 # MainFrameMenuBar
 file=&Fichier
 toolsSettings=&Configurations des outils
-open=&Ouvrir
+openProcess=&Ouvrir un processus
+openProject=&Ouvrir un projet
 quit=&Quitter
 activity=&Activité
 runActivity=&Lancer l'activité
@@ -106,6 +107,7 @@ AddExtLabelPath=Chemin :
 AddExtBtAdd=Ajouter
 AddExtBtCancel=Annuler
 AddExtBtBrowse=Parcourir
+AddExtBtDefault=Défaut
 AddExtBtUpdate=Modifier
 AddExtTitreAdd=Ajout d'une nouvelle extension
 AddExtTitreUpdate=Modification d'une extension
