--- a/PAGOD/src/resources/languages/wizard/pagod_wizard_fr.properties
+++ b/PAGOD/src/resources/languages/wizard/pagod_wizard_fr.properties
@@ -11,7 +11,9 @@ applicationDescription=...
 file=&Fichier
 toolsSettings=&Configurations des outils
 openProcess=&Ouvrir un processus
+closeProcess=F&ermer le processus
 openProject=&Ouvrir un projet
+closeProject=&Fermer le processus
 quit=&Quitter
 activity=&Activité
 runActivity=&Lancer l'activité
