rajout des actions open et close project et mis en place de correctoin sur l'activation des actions

--- a/PAGOD/src/resources/languages/wizard/pagod_wizard.properties
+++ b/PAGOD/src/resources/languages/wizard/pagod_wizard.properties
@@ -11,9 +11,9 @@ applicationDescription=...
 file=&Fichier
 toolsSettings=&Configurations des outils
 openProcess=&Ouvrir un processus
-closeProcess=F&ermer le processus
+newProject=&Nouveau projet
 openProject=&Ouvrir un projet
-closeProject=&Fermer le processus
+closeProject=&Fermer le projet
 quit=&Quitter
 activity=&Activité
 runActivity=&Lancer l'activité
