--- a/PAGOD/src/resources/languages/wizard/pagod_wizard_en.properties
+++ b/PAGOD/src/resources/languages/wizard/pagod_wizard_en.properties
@@ -10,9 +10,9 @@ applicationDescription=...
 # MainFrameMenuBar
 file=&File
 openProcess=&Open process
-closeProcess=C&lose process
+newProject=&New project
 openProject=&Open project
-closeProject=&Close process
+closeProject=&Close project
 toolsSettings=&Tools settings
 quit=&Quit
 activity=&Activity
