--- a/PAGOD/src/resources/languages/wizard/pagod_wizard_en.properties
+++ b/PAGOD/src/resources/languages/wizard/pagod_wizard_en.properties
@@ -121,6 +121,13 @@ NewProjectLabel=Name of the project :
 NewProjectErrorCreateException=A project with the same name already exists.
 NewProjectErrorTitle=Error
 
+#OpenProjectDialog
+OpenProjectTitre=Open an existing project
+OpenProjectBtOpen=Open
+OpenProjectBtCancel=Cancel
+OpenProjectErrorOpenException=No projects in the workspace
+OpenProjectErrorTitle=Error
+
 #SetToolDialog
 SetToolBtUpdate=Update
 SetToolBtBrowse=Browse
