--- a/PAGOD/src/resources/languages/wizard/pagod_wizard_fr.properties
+++ b/PAGOD/src/resources/languages/wizard/pagod_wizard_fr.properties
@@ -122,6 +122,13 @@ NewProjectLabel=Nom du projet :
 NewProjectErrorCreateException=Un projet du même nom existe déjà.
 NewProjectErrorTitle=Erreur
 
+#OpenProjectDialog
+OpenProjectTitre=Ouverture d'un projet existant
+OpenProjectBtOpen=Ouvrir
+OpenProjectBtCancel=Annuler
+OpenProjectErrorOpenException=Aucun projet n'est présent dans l'espace de développement
+OpenProjectErrorTitle=Erreur
+
 #SetToolDialog
 SetToolBtUpdate=Modifier
 SetToolBtBrowse=Parcourir
