--- a/PAGOD/src/resources/languages/wizard/pagod_wizard_en.properties
+++ b/PAGOD/src/resources/languages/wizard/pagod_wizard_en.properties
@@ -24,6 +24,7 @@ gotostep=&Go to
 ?=&?
 preferences=&Preferences
 about=&About
+timeActivity=&Consult elapsed time
 
 # AboutFrame
 aboutFrameTitle=About PAGOD
@@ -144,6 +145,9 @@ ToolsSettingsClose=Close
 ToolsSettingsTool=Tool :
 ToolsSettingsPath=Path :
 ToolsSettingsTitle=Tools Settings
+
+#TimeActivityDialog
+TimeActivityDialogTitle=Elapsed time on the project
 
 #ActionsPanel
 ActionsPanelLabelNoGuideAvailable=No guidance available for this product.
