--- a/PAGOD/src/resources/languages/wizard/pagod_wizard_fr.properties
+++ b/PAGOD/src/resources/languages/wizard/pagod_wizard_fr.properties
@@ -24,6 +24,7 @@ gotostep=A&ller à
 ?=&?
 preferences=&Préférences
 about=&A propos
+timeActivity=&Consulter les temps passés
 
 # AboutFrame
 aboutFrameTitle=A propos de PAGOD
@@ -145,6 +146,9 @@ ToolsSettingsClose=Fermer
 ToolsSettingsTool=Outil :
 ToolsSettingsPath=Chemin :
 ToolsSettingsTitle=Configuration des outils
+
+#TimeActivityDialog
+TimeActivityDialogTitle=Temps passés sur le projet
 
 #ActionsPanel
 ActionsPanelLabelNoGuideAvailable=Aucun guide disponible pour ce produit
