Mise à jour des fichiers de langue pr l'internationalisation

--- a/PAGOD/src/resources/languages/wizard/pagod_wizard_fr.properties
+++ b/PAGOD/src/resources/languages/wizard/pagod_wizard_fr.properties
@@ -50,6 +50,9 @@ CancelButtonLabel=Annuler
 noComment=Aucun descriptif n'a été défini pour cette étape.
 stepPresentation=Voici l'étape :
 infoOutputProduct=Cliquez sur <b>Suivant</b> pour créer les produits de cette étape.
+activityPresentation = Présentation de l'activité
+preConditions = Vérification des préconditions
+postConditions = Vérification des post-conditions
 
 #CheckPane
 CheckRoleLabel=ROLE : 
