--- a/PAGOD/src/resources/languages/wizard/pagod_wizard_en.properties
+++ b/PAGOD/src/resources/languages/wizard/pagod_wizard_en.properties
@@ -50,6 +50,9 @@ CancelButtonLabel=Cancel
 noComment=There are no description for this step.
 stepPresentation=Here is the step.
 infoOutputProduct=Click on <b>Next</b> to create THE productS of this step
+activityPresentation = Activity Presentation
+preConditions = Preconditions check-up
+postConditions = Post-Conditions check-up
 
 #CheckPane
 CheckRoleLabel=ROLE : 
