ajout de la gestion des langues pour timeactivitydialog

--- a/PAGOD/src/resources/languages/wizard/pagod_wizard_en.properties
+++ b/PAGOD/src/resources/languages/wizard/pagod_wizard_en.properties
@@ -151,6 +151,8 @@ ToolsSettingsTitle=Tools Settings
 
 #TimeActivityDialog
 TimeActivityDialogTitle=Elapsed time on the project
+TimeActivityColumnNameTime=Elapsed time
+TimeActivityColumnNameActivity=Activity
 
 #ActionsPanel
 ActionsPanelLabelNoGuideAvailable=No guidance available for this product.
