--- a/PAGOD/src/resources/languages/wizard/pagod_wizard_fr.properties
+++ b/PAGOD/src/resources/languages/wizard/pagod_wizard_fr.properties
@@ -152,6 +152,8 @@ ToolsSettingsTitle=Configuration des outils
 
 #TimeActivityDialog
 TimeActivityDialogTitle=Temps passés sur le projet
+TimeActivityColumnNameTime=Temps passé
+TimeActivityColumnNameActivity=Activité
 
 #ActionsPanel
 ActionsPanelLabelNoGuideAvailable=Aucun guide disponible pour ce produit
