--- a/PAGOD/src/resources/languages/wizard/pagod_wizard.properties
+++ b/PAGOD/src/resources/languages/wizard/pagod_wizard.properties
@@ -154,6 +154,8 @@ ToolsSettingsTitle=Configuration des outils
 
 #TimeActivityDialog
 TimeActivityDialogTitle=Temps passés sur le projet
+TimeActivityColumnNameTime=Temps passé
+TimeActivityColumnNameActivity=Activité
 
 #ActionsPanel
 ActionsPanelLabelNoGuideAvailable=Aucun guide disponible pour ce produit
