Modification de l'ouverture d'un produit + création d'un JOptionPane d'information + maj des fichiers langues pour les besoins de mes modifications

--- a/PAGOD/src/resources/languages/wizard/pagod_wizard_fr.properties
+++ b/PAGOD/src/resources/languages/wizard/pagod_wizard_fr.properties
@@ -160,6 +160,10 @@ ActionsPanelLabelNoGuideAvailable=Aucun guide disponible pour ce produit
 
 #ListProductsPanel
 ListProductsPanelBpLauncherProduct=Créer Produit
+ListProductsPanelBpUpdaterProduct=Modifier Produit
+ListProductsPanelCommentsFileProperties=Ce fichier recence les associations produits/documents
+WarningSaveProductName=Le produit doit être sauvegarder dans le dossier "produits" du projet courant.\nIl doit de plus avoir le même nom que celui fournit par PAGOD.
+WarningSaveProductNameTitle=Enregistrement d'un produit
 
 #InterfaceManager
 InterfaceManager_invalidProcessFileTitle=Impossible d'ouvrir le fichier.
