--- a/PAGOD/src/resources/languages/wizard/pagod_wizard_en.properties
+++ b/PAGOD/src/resources/languages/wizard/pagod_wizard_en.properties
@@ -159,6 +159,10 @@ ActionsPanelLabelNoGuideAvailable=No guidance available for this product.
 
 #ListProductsPanel
 ListProductsPanelBpLauncherProduct=Create Product
+ListProductsPanelBpUpdaterProduct=Update Product
+ListProductsPanelCommentsFileProperties=This file recence associations between products and documents
+WarningSaveProductName=The product must be saved in the directory "produits" of the current project.\nIt must moreover have the same name that which provides by PAGOD.
+WarningSaveProductNameTitle=Concerning the product's save
 
 #InterfaceManager
 InterfaceManager_invalidProcessFileTitle=Unable to open this file.
