mise à jour des fichiers de langue : correction de faute d orthographe pr le postConditionCheckerState + enlevé stepPresentation=Voici l' étape qui ne sert plus
mise à jour du stepPanel : enlevé Voici l'étape
+ enlevé souligné, auby a dit : c pas beau ... :D

--- a/PAGOD/src/resources/languages/wizard/pagod_wizard_fr.properties
+++ b/PAGOD/src/resources/languages/wizard/pagod_wizard_fr.properties
@@ -48,7 +48,6 @@ CancelButtonLabel=Annuler
 
 #StepPanel
 noComment=Aucun descriptif n'a été défini pour cette étape.
-stepPresentation=Voici l'étape :
 infoOutputProduct=Cliquez sur <b>Suivant</b> pour créer les produits de cette étape.
 activityPresentation = Présentation de l'activité
 preConditions = Vérification des préconditions
@@ -61,7 +60,7 @@ CheckToolsLabel=Vous devez disposer des outils suivants :
 CheckGuidancesLabel=Guides disponibles sur cette activité :
 
 #EndCheckPanel
-CheckOutputProductsLabel=Vous devez avoir réaliser les produits suivants :
+CheckOutputProductsLabel=Vous devez avoir réalisé les produits suivants :
 
 #ProcessPane Message
 noContentActivity=Aucun descriptif n'a été défini pour cette activité.
