mise à jour de la combo pour bien différencier les etapes des pre/post cond et activityPresentation mise à jour des fichiers langues pr step

--- a/PAGOD/src/resources/languages/wizard/pagod_wizard.properties
+++ b/PAGOD/src/resources/languages/wizard/pagod_wizard.properties
@@ -21,6 +21,7 @@ next=&Suivant
 previous=&Précédent
 terminate=&Terminer
 gotostep=A&ller à
+step=Etape
 ?=&?
 preferences=&Préférences
 about=&A propos
