--- a/PAGOD/src/resources/languages/wizard/pagod_wizard_fr.properties
+++ b/PAGOD/src/resources/languages/wizard/pagod_wizard_fr.properties
@@ -21,6 +21,7 @@ next=&Suivant
 previous=&Précédent
 terminate=&Terminer
 gotostep=A&ller à
+step=Etape
 ?=&?
 preferences=&Préférences
 about=&A propos
