Maintenant qd la modification d'un produit ouvre bien le produit.

--- a/PAGOD/src/resources/languages/wizard/pagod_wizard_en.properties
+++ b/PAGOD/src/resources/languages/wizard/pagod_wizard_en.properties
@@ -161,7 +161,8 @@ ActionsPanelLabelNoGuideAvailable=No guidance available for this product.
 ListProductsPanelBpLauncherProduct=Create Product
 ListProductsPanelBpUpdaterProduct=Update Product
 ListProductsPanelCommentsFileProperties=This file recence associations between products and documents
-WarningSaveProductName=The product must be saved in the directory "produits" of the current project.\nIt must moreover have the same name that which provides by PAGOD.
+WarningSaveProductName1=The product must saved in the directory
+WarningSaveProductName2=and name must be
 WarningSaveProductNameTitle=Concerning the product's save
 
 #InterfaceManager
