--- a/PAGOD/src/resources/languages/wizard/pagod_wizard_fr.properties
+++ b/PAGOD/src/resources/languages/wizard/pagod_wizard_fr.properties
@@ -162,7 +162,8 @@ ActionsPanelLabelNoGuideAvailable=Aucun guide disponible pour ce produit
 ListProductsPanelBpLauncherProduct=Créer Produit
 ListProductsPanelBpUpdaterProduct=Modifier Produit
 ListProductsPanelCommentsFileProperties=Ce fichier recence les associations produits/documents
-WarningSaveProductName=Le produit doit être sauvegarder dans le dossier "produits" du projet courant.\nIl doit de plus avoir le même nom que celui fournit par PAGOD.
+WarningSaveProductName1=Le produit doit être sauvegarder dans le dossier 
+WarningSaveProductName2=et doit avoir pour nom
 WarningSaveProductNameTitle=Enregistrement d'un produit
 
 #InterfaceManager
