modification de libelle

--- a/PAGOD/src/resources/languages/wizard/pagod_wizard_en.properties
+++ b/PAGOD/src/resources/languages/wizard/pagod_wizard_en.properties
@@ -59,8 +59,9 @@ CheckRoleLabel=ROLE :
 CheckProductsLabel=You must have the following products :
 CheckToolsLabel=You must have the following tools :
 CheckGuidancesLabel=Guidances available for this activity :
+
 #EndCheckPanel
-CheckOutputProductsLabel=You should have realize the following products :
+CheckOutputProductsLabel=You should have realize the following product(s) :
 
 #ProcessPane Message
 noContentActivity=There is no description for this activity.
