--- a/PAGOD/src/resources/languages/wizard/pagod_wizard.properties
+++ b/PAGOD/src/resources/languages/wizard/pagod_wizard.properties
@@ -63,7 +63,7 @@ CheckToolsLabel=Vous devez disposer des outils suivants :
 CheckGuidancesLabel=Guides disponibles sur cette activité :
 
 #EndCheckPanel
-CheckOutputsProductsLabel=Vous devez avoir réalisé les produits suivants :
+CheckOutputProductsLabel=Vous devez avoir réalisé le(s) produit(s) suivant(s) :
 
 #ProcessPane Message
 noContentActivity=Aucun descriptif n'a été défini pour cette activité.
