rajout de clé pour la fenetre about

--- a/PAGOD/src/resources/languages/wizard/pagod_wizard_en.properties
+++ b/PAGOD/src/resources/languages/wizard/pagod_wizard_en.properties
@@ -69,12 +69,14 @@ noContentWorkDef=There is no description for this work definition.
 noContentComponent=There is no description for this component.
 
 #AboutDialog
-aboutDialogWhatIsPagod=PAGOD is a personal wizard made to help you using a process
-aboutDialogLicence=<html><center>Copyright © 2004-2005 IUP ISI - Université Paul Sabatier<br>All rights reserved</center></html>
-aboutDialogAuthors=<html>Authors:<ul><li>M1 : Pierre Bernadou, Simon Bernard, Benjamin Cabé, Cédric Delmas</li><li>L3: Alexandre Bes, Guillaume Breton, Fabien Jouanne, Adeline Métivier, Loïc Salvado</li></ul></html>
-aboutDialogUsedComponents=<html>External components:<ul><li>HTMLParser <a href="http://htmlparser.sourceforge.net/">http://htmlparser.sourceforge.net/</a></li></ul></html>
+aboutDialogWhatIsPagod=PAGOD is a personal wizard made to help you using a process.
+aboutDialogLicence=<html><center>Copyright © 2004-2005 IUP ISI - Université Paul Sabatier<br>All rights reserved.<br> Software under GPL <br><br>Pagod is a part of apes suite (<a href="http://apes2.berlios.de/">http://apes2.berlios.de/</a>). </center></html>
+aboutDialogAuthors=<html>Authors:<ul><li>M1 (2004-2005): Pierre Bernadou, Simon Bernard, Benjamin Cabé, Cédric Delmas</li><li>M1 (2005-2006): Alexandre Bes, Guillaume Breton, Fabien Jouanne, Adeline Métivier, Loïc Salvado</li><li>L3: Sebastien Balard, Frédéric Becquier, Arnaud Giuliani, Pierre Pettera, Florian Piquemal</li></ul></html>
+aboutDialogUsedComponents=<html>External components:<ul><li>HTMLParser : <a href="http://htmlparser.sourceforge.net/">http://htmlparser.sourceforge.net/</a></li><li>JDOM : <a href="http://www.jdom.org/">http://www.jdom.org/</a></li><li>JDIC : <a href="https://jdic.dev.java.net/">https://jdic.dev.java.net/</a></li></ul></html>
 
 # Message
+timeElapsedMessage=<b>Time elapsed :</b>
+timeToGoMessage= Time to go
 welcomeMessage=<b>Welcome</b> !<br> I'm <b>Pagod</b> your personnal wizard !<br> I'm here to help you in your job !
 openedProcessMessage=Choose <b>the activity</b> you want to realize.
 activityPresentationMessage=Here is the <b>Global desciption</b> of this activity !<br> Thanks to that you can have a general view of your job.
@@ -202,4 +204,6 @@ cantReadFile=Can not read this File
 #CreateProduct
 createProductTitle=Create product
 createProductmsg=Do you want to create product
+
+
 
