--- a/PAGOD/src/resources/languages/wizard/pagod_wizard_fr.properties
+++ b/PAGOD/src/resources/languages/wizard/pagod_wizard_fr.properties
@@ -70,12 +70,14 @@ noContentWorkDef=Aucun descriptif n'a été défini pour cette définition de travai
 noContentComponent=Aucun descriptif n'a été défini pour ce composant processus.
 
 #AboutDialog
-aboutDialogWhatIsPagod=PAGOD est un assistant personnel au suivi de processus
-aboutDialogLicence=<html><center>Copyright © 2004-2005 IUP ISI - Université Paul Sabatier<br>Tous droits réservés</center></html>
-aboutDialogAuthors=<html>Auteurs:<ul><li>M1: Pierre Bernadou, Simon Bernard, Benjamin Cabé, Cédric Delmas</li><li>L3: Alexandre Bes, Guillaume Breton, Fabien Jouanne, Adeline Métivier, Loïc Salvado</li></ul></html>
-aboutDialogUsedComponents=<html>Composants externes:<ul><li>HTMLParser <a href="http://htmlparser.sourceforge.net/">http://htmlparser.sourceforge.net/</a></li></ul></html>
+aboutDialogWhatIsPagod=PAGOD est un assistant personnel au suivi de processus.
+aboutDialogLicence=<html><center>Copyright © 2004-2005 IUP ISI - Université Paul Sabatier<br>Tous droits réservés.<br>Logiciel sous licence GPL<br><br>Pagod fait parti de la suite Apes (<a href="http://apes2.berlios.de/">http://apes2.berlios.de/</a>).</center></html>
+aboutDialogAuthors=<html>Auteurs:<ul><li>M1 (2004-2005): Pierre Bernadou, Simon Bernard, Benjamin Cabé, Cédric Delmas</li><li>M1 (2005-2006): Alexandre Bes, Guillaume Breton, Fabien Jouanne, Adeline Métivier, Loïc Salvado</li><li>L3: Sebastien Balard, Frédéric Becquier, Arnaud Giuliani, Pierre Pettera, Florian Piquemal</li></ul></html>
+aboutDialogUsedComponents=<html>Composants externes:<ul><li>HTMLParser : <a href="http://htmlparser.sourceforge.net/">http://htmlparser.sourceforge.net/</a></li><li>JDOM : <a href="http://www.jdom.org/">http://www.jdom.org/</a></li><li>JDIC : <a href="https://jdic.dev.java.net/">https://jdic.dev.java.net/</a></li></ul></html>
 
 # Message
+timeElapsedMessage=<b>Temps pass&eacute; :</b>
+timeToGoMessage= Temps restant
 welcomeMessage=<b>Bienvenue</b> !<br> Je suis <b>Pagod</b> votre assistant personnel !<br> Je suis là pour vous aider dans la réalisation de votre travail !
 openedProcessMessage=Choisissez <b>l'activité</b> pour laquelle vous souhaitez que je vous assiste.
 activityPresentationMessage=Voici la <b>description globale</b> de l'activité !<br> Elle va vous permettre d'avoir une vue d'ensemble sur le travail à faire.
