Mise à jour des fichiers de langue + du language chooser Panel

--- a/PAGOD/src/resources/languages/wizard/pagod_wizard.properties
+++ b/PAGOD/src/resources/languages/wizard/pagod_wizard.properties
@@ -46,6 +46,7 @@ seeFileOfContents=Voir le descriptif.
 RolesChooserDialogTitle=Choisissez vos roles.
 OKButtonLabel=Valider
 CancelButtonLabel=Annuler
+BrowseButtonLabel=Parcourir
 
 #StepPanel
 noComment=Aucun descriptif n'a été défini pour cette étape.
@@ -53,8 +54,6 @@ infoOutputProduct=Cliquez sur <b>Suivant</b> pour créer les produits de cette ét
 activityPresentation = Présentation de l'activité
 preConditions = Vérification des préconditions
 postConditions = Vérification des post-conditions
-
-
 
 #CheckPane
 CheckRoleLabel=ROLE : 
@@ -156,6 +155,7 @@ ToolsSettingsTitle=Configuration des outils
 
 #TimeActivityDialog
 TimeActivityDialogTitle=Temps passés sur le projet
+TimeEditDialogTitle=Temps pour l'activité
 TimeActivityColumnNameTime=Temps passé
 TimeActivityColumnNameActivity=Activité
 
@@ -201,8 +201,12 @@ loadPreferencesErrorMessage=Impossible de charger les préférences du fichier. Vo
 loadPreferencesErrorTitle=Chargement impossible
 
 #TextViewerPane
-cantReadFile=Impossible de lire le fichier
+cantReadFile=Impossible de lire le fichier 
 
+#CreateProduct
+createProductTitle=Créer un produit
+createProductmsg=Voulez-vous créer le produit
 
-
- 
+#TimeEditDialog
+PassedTimeLabel=Temps passé
+EstimatedTimeLabel=Temps restant estimé
