--- a/PAGOD/src/resources/languages/wizard/pagod_wizard_en.properties
+++ b/PAGOD/src/resources/languages/wizard/pagod_wizard_en.properties
@@ -46,6 +46,7 @@ seeFileOfContents=See description
 RolesChooserDialogTitle="Choose your roles"
 OKButtonLabel=OK
 CancelButtonLabel=Cancel
+BrowseButtonLabel=Browse
 
 #StepPanel
 noComment=There are no description for this step.
@@ -154,6 +155,7 @@ ToolsSettingsTitle=Tools Settings
 
 #TimeActivityDialog
 TimeActivityDialogTitle=Elapsed time on the project
+TimeEditDialogTitle=Passed or estimated time on activity
 TimeActivityColumnNameTime=Elapsed time
 TimeActivityColumnNameActivity=Activity
 
@@ -205,5 +207,6 @@ cantReadFile=Can not read this File
 createProductTitle=Create product
 createProductmsg=Do you want to create product
 
-
-
+#TimeEditDialog
+PassedTimeLabel=Passed time
+EstimatedTimeLabel=Estimated remaining time
