--- a/PAGOD/src/resources/languages/wizard/pagod_wizard_fr.properties
+++ b/PAGOD/src/resources/languages/wizard/pagod_wizard_fr.properties
@@ -46,6 +46,7 @@ seeFileOfContents=Voir le descriptif.
 RolesChooserDialogTitle=Choisissez vos roles.
 OKButtonLabel=Valider
 CancelButtonLabel=Annuler
+BrowseButtonLabel=Parcourir
 
 #StepPanel
 noComment=Aucun descriptif n'a été défini pour cette étape.
@@ -62,7 +63,6 @@ CheckGuidancesLabel=Guides disponibles sur cette activité :
 
 #EndCheckPanel
 CheckOutputProductsLabel=Vous devez avoir réalisé le(s) produit(s) suivant(s) :
-
 
 #ProcessPane Message
 noContentActivity=Aucun descriptif n'a été défini pour cette activité.
@@ -155,6 +155,7 @@ ToolsSettingsTitle=Configuration des outils
 
 #TimeActivityDialog
 TimeActivityDialogTitle=Temps passés sur le projet
+TimeEditDialogTitle=Temps pour l'activité
 TimeActivityColumnNameTime=Temps passé
 TimeActivityColumnNameActivity=Activité
 
@@ -206,3 +207,6 @@ cantReadFile=Impossible de lire le fichier
 createProductTitle=Créer un produit
 createProductmsg=Voulez-vous créer le produit
 
+#TimeEditDialog
+PassedTimeLabel=Temps passé
+EstimatedTimeLabel=Temps restant estimé
