mise à jour des fichiers de langue + dépot de TimeEditDialog pour l instant pas testée, mais pas appelée non plus ... la fonction de validation n'est pas implémentée non plus .

--- a/PAGOD/src/resources/languages/wizard/pagod_wizard.properties
+++ b/PAGOD/src/resources/languages/wizard/pagod_wizard.properties
@@ -210,3 +210,4 @@ createProductmsg=Voulez-vous créer le produit
 #TimeEditDialog
 PassedTimeLabel=Temps passé
 EstimatedTimeLabel=Temps restant estimé
+TimeEditDialogTitle=Edition des temps de l'activité
