--- a/PAGOD/src/resources/languages/wizard/pagod_wizard_en.properties
+++ b/PAGOD/src/resources/languages/wizard/pagod_wizard_en.properties
@@ -210,3 +210,4 @@ createProductmsg=Do you want to create product
 #TimeEditDialog
 PassedTimeLabel=Passed time
 EstimatedTimeLabel=Estimated remaining time
+TimeEditDialogTitle=Edit Activity Time
