--- a/PAGOD/src/resources/languages/wizard/pagod_wizard_fr.properties
+++ b/PAGOD/src/resources/languages/wizard/pagod_wizard_fr.properties
@@ -210,3 +210,4 @@ createProductmsg=Voulez-vous créer le produit
 #TimeEditDialog
 PassedTimeLabel=Temps passé
 EstimatedTimeLabel=Temps restant estimé
+TimeEditDialogTitle=Edition des temps de l'activité
