--- a/PAGOD/src/resources/languages/wizard/pagod_wizard_en.properties
+++ b/PAGOD/src/resources/languages/wizard/pagod_wizard_en.properties
@@ -211,3 +211,7 @@ createProductmsg=Do you want to create product
 PassedTimeLabel=Passed time
 EstimatedTimeLabel=Estimated remaining time
 TimeEditDialogTitle=Edit Activity Time
+
+#Workspace
+WorkspaceException=The workspace is not chosen or the path chosen is invalid.
+WorkspaceErrorTitle=Error
