--- a/PAGOD/src/resources/languages/wizard/pagod_wizard_fr.properties
+++ b/PAGOD/src/resources/languages/wizard/pagod_wizard_fr.properties
@@ -211,3 +211,7 @@ createProductmsg=Voulez-vous créer le produit
 PassedTimeLabel=Temps passé
 EstimatedTimeLabel=Temps restant estimé
 TimeEditDialogTitle=Edition des temps de l'activité
+
+#Workspace
+WorkspaceException=L'espace de travail n'a pas été défini ou bien le chemin choisi est invalide.
+WorkspaceErrorTitle=Erreur
