--- a/PAGOD/src/resources/languages/wizard/pagod_wizard_en.properties
+++ b/PAGOD/src/resources/languages/wizard/pagod_wizard_en.properties
@@ -158,6 +158,8 @@ TimeActivityDialogTitle=Elapsed time on the project
 TimeEditDialogTitle=Passed or estimated time on activity
 TimeActivityColumnNameTime=Elapsed time
 TimeActivityColumnNameActivity=Activity
+EditTimeException=Value you have written is not valid, it must be like this h:m:s
+EditTimeErrorTitle=Time modification error
 
 #ActionsPanel
 ActionsPanelLabelNoGuideAvailable=No guidance available for this product.
