--- a/PAGOD/src/resources/languages/wizard/pagod_wizard_fr.properties
+++ b/PAGOD/src/resources/languages/wizard/pagod_wizard_fr.properties
@@ -158,6 +158,8 @@ TimeActivityDialogTitle=Temps passés sur le projet
 TimeEditDialogTitle=Temps pour l'activité
 TimeActivityColumnNameTime=Temps passé
 TimeActivityColumnNameActivity=Activité
+EditTimeException=La valeur que vous avez indiqué n'est pas valide, ce doit être de la forme h:m:s
+EditTimeErrorTitle=Erreur dans la modification du temps
 
 #ActionsPanel
 ActionsPanelLabelNoGuideAvailable=Aucun guide disponible pour ce produit
