--- a/PAGOD/src/resources/languages/wizard/pagod_wizard_en.properties
+++ b/PAGOD/src/resources/languages/wizard/pagod_wizard_en.properties
@@ -20,6 +20,7 @@ runActivity=&Run Activity
 next=&Next
 previous=&Previous
 terminate=&Terminate
+suspend=&Suspend
 gotostep=&Go to
 step=Step
 ?=&?
