--- a/PAGOD/src/resources/languages/wizard/pagod_wizard_fr.properties
+++ b/PAGOD/src/resources/languages/wizard/pagod_wizard_fr.properties
@@ -20,6 +20,7 @@ runActivity=&Lancer l'activité
 next=&Suivant
 previous=&Précédent
 terminate=&Terminer
+suspend=&Suspendre
 gotostep=A&ller à
 step=Etape
 ?=&?
