Internationalisation des modifs faites avec zelbo

--- a/PAGOD/src/resources/languages/wizard/pagod_wizard.properties
+++ b/PAGOD/src/resources/languages/wizard/pagod_wizard.properties
@@ -64,6 +64,7 @@ CheckGuidancesLabel=Guides disponibles sur cette activité :
 
 #EndCheckPanel
 CheckOutputProductsLabel=Vous devez avoir réalisé le(s) produit(s) suivant(s) :
+CheckListLabel=Liste(s) de contrôles disponible(s) sur cette activité :
 
 #ProcessPane Message
 noContentActivity=Aucun descriptif n'a été défini pour cette activité.
