--- a/PAGOD/src/resources/languages/wizard/pagod_wizard_en.properties
+++ b/PAGOD/src/resources/languages/wizard/pagod_wizard_en.properties
@@ -60,10 +60,11 @@ postConditions = Post-Conditions check-up
 CheckRoleLabel=ROLE : 
 CheckProductsLabel=You must have the following products :
 CheckToolsLabel=You must have the following tools :
-CheckGuidancesLabel=Guidances available for this activity :
+CheckGuidancesLabel=Available guidance(s) for this activity :
 
 #EndCheckPanel
 CheckOutputProductsLabel=You should have realize the following product(s) :
+CheckListLabel=Available Checklist(s) for this activity :
 
 #ProcessPane Message
 noContentActivity=There is no description for this activity.
