mise à jour des fichiers de langues apres synchro avec last version

--- a/PAGOD/src/resources/languages/wizard/pagod_wizard_en.properties
+++ b/PAGOD/src/resources/languages/wizard/pagod_wizard_en.properties
@@ -78,10 +78,12 @@ aboutDialogAuthors=<html>Authors:<ul><li>M1 (2004-2005): Pierre Bernadou, Simon 
 aboutDialogUsedComponents=<html>External components:<ul><li>HTMLParser : <a href="http://htmlparser.sourceforge.net/">http://htmlparser.sourceforge.net/</a></li><li>JDOM : <a href="http://www.jdom.org/">http://www.jdom.org/</a></li><li>JDIC : <a href="https://jdic.dev.java.net/">https://jdic.dev.java.net/</a></li></ul></html>
 
 # Message
-timeElapsedMessage=<b>Time elapsed :</b>
-timeToGoMessage= Time to go
+timeElapsedMessage=<b>ElapsedTime :</b>
+timeToGoMessage= Remaining Time :
 welcomeMessage=<b>Welcome</b> !<br> I'm <b>Pagod</b> your personnal wizard !<br> I'm here to help you in your job !
 openedProcessMessage=Choose <b>the activity</b> you want to realize.
+activityRole=<b>Role</b>
+activityActivity=<b>Activity</b>
 activityPresentationMessage=Here is the <b>Global desciption</b> of this activity !<br> Thanks to that you can have a general view of your job.
 activityCheckListMessage=Before you begin, I advise you to <b>check this points</b>.
 activityEndCheckListMessage=You have done this activity, I advise you to check if you have <b>realize the following products</b>!
