--- a/PAGOD/src/resources/languages/wizard/pagod_wizard_fr.properties
+++ b/PAGOD/src/resources/languages/wizard/pagod_wizard_fr.properties
@@ -82,6 +82,8 @@ timeElapsedMessage=<b>Temps pass&eacute; :</b>
 timeToGoMessage= Temps restant
 welcomeMessage=<b>Bienvenue</b> !<br> Je suis <b>Pagod</b> votre assistant personnel !<br> Je suis là pour vous aider dans la réalisation de votre travail !
 openedProcessMessage=Choisissez <b>l'activité</b> pour laquelle vous souhaitez que je vous assiste.
+activityRole=<b>Rôle</b>
+activityActivity=<b>Activité</b>
 activityPresentationMessage=Voici la <b>description globale</b> de l'activité !<br> Elle va vous permettre d'avoir une vue d'ensemble sur le travail à faire.
 activityCheckListMessage=Avant de commencer votre travail, je vous conseille de vérifier les <b>prérequis</b> suivant !
 activityEndCheckListMessage=Vous avez fini cette activité, je vous conseille de vérifier si vous avez bien <b>réalisé les produits suivants</b>!
