--- a/PAGOD/src/resources/languages/wizard/pagod_wizard.properties
+++ b/PAGOD/src/resources/languages/wizard/pagod_wizard.properties
@@ -80,6 +80,8 @@ aboutDialogUsedComponents=<html>Composants externes:<ul><li>HTMLParser : <a href
 # Message
 timeElapsedMessage=<b>Temps pass&eacute; :</b>
 timeToGoMessage= Temps restant
+activityRole=<b>Rôle</b>
+activityActivity=<b>Activité</b>
 welcomeMessage=<b>Bienvenue</b> !<br> Je suis <b>Pagod</b> votre assistant personnel !<br> Je suis là pour vous aider dans la réalisation de votre travail !
 openedProcessMessage=Choisissez <b>l'activité</b> pour laquelle vous souhaitez que je vous assiste.
 activityPresentationMessage=Voici la <b>description globale</b> de l'activité !<br> Elle va vous permettre d'avoir une vue d'ensemble sur le travail à faire.
