correction d'un oublie ;)

--- a/PAGOD/src/resources/languages/wizard/pagod_wizard_en.properties
+++ b/PAGOD/src/resources/languages/wizard/pagod_wizard_en.properties
@@ -78,8 +78,9 @@ aboutDialogAuthors=<html>Authors:<ul><li>M1 (2004-2005): Pierre Bernadou, Simon 
 aboutDialogUsedComponents=<html>External components:<ul><li>HTMLParser : <a href="http://htmlparser.sourceforge.net/">http://htmlparser.sourceforge.net/</a></li><li>JDOM : <a href="http://www.jdom.org/">http://www.jdom.org/</a></li><li>JDIC : <a href="https://jdic.dev.java.net/">https://jdic.dev.java.net/</a></li></ul></html>
 
 # Message
-timeElapsedMessage=<b>ElapsedTime :</b>
-timeToGoMessage= Remaining Time :
+
+timeElapsedMessage=<b>Time elapsed :</b>
+timeRemainingMessage=<b>Time remaining :</b>
 welcomeMessage=<b>Welcome</b> !<br> I'm <b>Pagod</b> your personnal wizard !<br> I'm here to help you in your job !
 openedProcessMessage=Choose <b>the activity</b> you want to realize.
 activityRole=<b>Role</b>
