--- a/PAGOD/src/resources/languages/wizard/pagod_wizard_fr.properties
+++ b/PAGOD/src/resources/languages/wizard/pagod_wizard_fr.properties
@@ -79,7 +79,7 @@ aboutDialogUsedComponents=<html>Composants externes:<ul><li>HTMLParser : <a href
 
 # Message
 timeElapsedMessage=<b>Temps pass&eacute; :</b>
-timeToGoMessage= Temps restant
+timeRemainingMessage=<b>Temps restant :</b>
 welcomeMessage=<b>Bienvenue</b> !<br> Je suis <b>Pagod</b> votre assistant personnel !<br> Je suis là pour vous aider dans la réalisation de votre travail !
 openedProcessMessage=Choisissez <b>l'activité</b> pour laquelle vous souhaitez que je vous assiste.
 activityRole=<b>Rôle</b>
