Ajout du menu Iteration, des 3 sous menus, et des actions associées (reste a remplir les actions pour qu'elles fassent autre chose que sysout ;) )

--- a/PAGOD/src/resources/languages/wizard/pagod_wizard.properties
+++ b/PAGOD/src/resources/languages/wizard/pagod_wizard.properties
@@ -12,7 +12,7 @@ file=&Fichier
 toolsSettings=&Configurations des outils
 openProcess=&Ouvrir un processus
 newProject=&Nouveau projet
-openProject=&Ouvrir un projet
+openProject=Ouvrir un &projet
 closeProject=&Fermer le projet
 quit=&Quitter
 activity=&Activité
@@ -26,7 +26,10 @@ step=Etape
 ?=&?
 preferences=&Préférences
 about=&A propos
-timeActivity=&Consulter les temps passés
+iteration=&Itération
+timeActivity=Consulter les &temps passés sur l'itération courante
+nextIteration=Passer à l'itération &suivante
+timeActivityAllIteration=Consulter les temps passés depuis le &début du projet
 
 # AboutFrame
 aboutFrameTitle=A propos de PAGOD
@@ -158,7 +161,7 @@ ToolsSettingsPath=Chemin :
 ToolsSettingsTitle=Configuration des outils
 
 #TimeActivityDialog
-TimeActivityDialogTitle=Temps passés sur le projet
+TimeActivityDialogTitle=Temps passés sur l'itération courante
 TimeEditDialogTitle=Temps pour l'activité
 TimeActivityColumnNameTime=Temps passé
 TimeActivityColumnNameActivity=Activité
