--- a/PAGOD/src/resources/languages/wizard/pagod_wizard_en.properties
+++ b/PAGOD/src/resources/languages/wizard/pagod_wizard_en.properties
@@ -11,7 +11,7 @@ applicationDescription=...
 file=&File
 openProcess=&Open process
 newProject=&New project
-openProject=&Open project
+openProject=Open &project
 closeProject=&Close project
 toolsSettings=&Tools settings
 quit=&Quit
@@ -26,7 +26,10 @@ step=Step
 ?=&?
 preferences=&Preferences
 about=&About
-timeActivity=&Consult elapsed time
+iteration=&Iteration
+timeActivity=Consult elapsed time on current iteration
+nextIteration=Go to next iteration
+timeActivityAllIteration=Consult elapsed time since the beginning of the project
 
 # AboutFrame
 aboutFrameTitle=About PAGOD
@@ -159,7 +162,7 @@ ToolsSettingsPath=Path :
 ToolsSettingsTitle=Tools Settings
 
 #TimeActivityDialog
-TimeActivityDialogTitle=Elapsed time on the project
+TimeActivityDialogTitle=Elapsed time on current iteration
 TimeEditDialogTitle=Passed or estimated time on activity
 TimeActivityColumnNameTime=Elapsed time
 TimeActivityColumnNameActivity=Activity
