--- a/PAGOD/src/resources/languages/wizard/pagod_wizard_fr.properties
+++ b/PAGOD/src/resources/languages/wizard/pagod_wizard_fr.properties
@@ -163,7 +163,8 @@ ToolsSettingsTitle=Configuration des outils
 #TimeActivityDialog
 TimeActivityDialogTitle=Temps passés sur l'itération courante
 TimeEditDialogTitle=Temps pour l'activité
-TimeActivityColumnNameTime=Temps passé
+TimeActivityColumnNameTimeElapsed=Temps passé
+TimeActivityColumnNameTimeRemaining=Temps prévu
 TimeActivityColumnNameActivity=Activité
 EditTimeException=La valeur que vous avez indiqué n'est pas valide, ce doit être de la forme h:m:s
 EditTimeErrorTitle=Erreur dans la modification du temps
